--- a/rag.ipynb
+++ b/rag.ipynb
@@ -493,10 +493,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 123.61 / 300 (41.2%): 100%|██████████| 300/300 [02:18<00:00,  2.17it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/11 21:16:49 INFO dspy.evaluate.evaluate: Average Metric: 123.61108373468522 / 300 (41.2%)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question</th>\n",
+       "      <th>example_response</th>\n",
+       "      <th>gold_doc_ids</th>\n",
+       "      <th>reasoning</th>\n",
+       "      <th>pred_response</th>\n",
+       "      <th>SemanticF1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>when to use c over c++, and c++ over c?</td>\n",
+       "      <td>If you are equally familiar with both C++ and C, it's advisable to...</td>\n",
+       "      <td>[733]</td>\n",
+       "      <td>C and C++ are both powerful programming languages, but they serve ...</td>\n",
+       "      <td>Use C when you need low-level system programming, performance, and...</td>\n",
+       "      <td>✔️ [0.286]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>should images be stored in a git repository?</td>\n",
+       "      <td>One viewpoint expresses that there is no significant downside, esp...</td>\n",
+       "      <td>[6253, 6254, 6275, 6278, 8215]</td>\n",
+       "      <td>Storing images in a Git repository can be problematic for several ...</td>\n",
+       "      <td>No, images should generally not be stored in a Git repository due ...</td>\n",
+       "      <td>✔️ [0.286]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       question  \\\n",
+       "0       when to use c over c++, and c++ over c?   \n",
+       "1  should images be stored in a git repository?   \n",
+       "\n",
+       "                                                        example_response  \\\n",
+       "0  If you are equally familiar with both C++ and C, it's advisable to...   \n",
+       "1  One viewpoint expresses that there is no significant downside, esp...   \n",
+       "\n",
+       "                     gold_doc_ids  \\\n",
+       "0                           [733]   \n",
+       "1  [6253, 6254, 6275, 6278, 8215]   \n",
+       "\n",
+       "                                                               reasoning  \\\n",
+       "0  C and C++ are both powerful programming languages, but they serve ...   \n",
+       "1  Storing images in a Git repository can be problematic for several ...   \n",
+       "\n",
+       "                                                           pred_response  \\\n",
+       "0  Use C when you need low-level system programming, performance, and...   \n",
+       "1  No, images should generally not be stored in a Git repository due ...   \n",
+       "\n",
+       "   SemanticF1  \n",
+       "0  ✔️ [0.286]  \n",
+       "1  ✔️ [0.286]  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <div style='\n",
+       "                    text-align: center;\n",
+       "                    font-size: 16px;\n",
+       "                    font-weight: bold;\n",
+       "                    color: #555;\n",
+       "                    margin: 10px 0;'>\n",
+       "                    ... 298 more rows not displayed ...\n",
+       "                </div>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "41.2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=9c2d54a58a42401090e9c6149e2b1675&amp;experiment_id=374362034103955121&amp;trace_id=e43cdd1ad5be4aa5873ea044e6340d8c&amp;experiment_id=374362034103955121&amp;trace_id=2d5d8c8bdbb2468fafe2794fa67c7d3d&amp;experiment_id=374362034103955121&amp;trace_id=24644b17911e4f5f8608f9eb4c97d29c&amp;experiment_id=374362034103955121&amp;trace_id=d7bca27745f34aa2802bddf7ba73130c&amp;experiment_id=374362034103955121&amp;trace_id=8cd4080d6ce54dcf9bc41a8705aa63bb&amp;experiment_id=374362034103955121&amp;trace_id=3442f5512077413e9f6a0fa2c6ad4fa8&amp;experiment_id=374362034103955121&amp;trace_id=09af4dd6b1374730a787754f42775a34&amp;experiment_id=374362034103955121&amp;trace_id=6215161c12044018a00f80695305639b&amp;experiment_id=374362034103955121&amp;trace_id=d76ec63328904174a60849841c1d3ef4&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "[Trace(request_id=9c2d54a58a42401090e9c6149e2b1675), Trace(request_id=e43cdd1ad5be4aa5873ea044e6340d8c), Trace(request_id=2d5d8c8bdbb2468fafe2794fa67c7d3d), Trace(request_id=24644b17911e4f5f8608f9eb4c97d29c), Trace(request_id=d7bca27745f34aa2802bddf7ba73130c), Trace(request_id=8cd4080d6ce54dcf9bc41a8705aa63bb), Trace(request_id=3442f5512077413e9f6a0fa2c6ad4fa8), Trace(request_id=09af4dd6b1374730a787754f42775a34), Trace(request_id=6215161c12044018a00f80695305639b), Trace(request_id=d76ec63328904174a60849841c1d3ef4)]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Define an evaluator that we can re-use.\n",
+    "evaluate = dspy.Evaluate(devset=devset, metric=metric, num_threads=24,\n",
+    "                         display_progress=True, display_table=2)\n",
+    "\n",
+    "# Evaluate the Chain-of-Thought program.\n",
+    "evaluate(cot)"
+   ]
   }
  ],
  "metadata": {
