--- a/rag.ipynb
+++ b/rag.ipynb
@@ -684,6 +684,224 @@
     "# Evaluate the Chain-of-Thought program.\n",
     "evaluate(cot)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading 'ragqa_arena_tech_corpus.jsonl'...\n"
+     ]
+    }
+   ],
+   "source": [
+    "download(\"https://huggingface.co/dspy/cache/resolve/main/ragqa_arena_tech_corpus.jsonl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 28436 documents. Will encode them below.\n",
+      "Training a 32-byte FAISS index with 337 partitions, based on 28436 x 512-dim embeddings\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_characters = 6000  # for truncating >99th percentile of documents\n",
+    "topk_docs_to_retrieve = 5  # number of documents to retrieve per search query\n",
+    "\n",
+    "with open(\"ragqa_arena_tech_corpus.jsonl\") as f:\n",
+    "    corpus = [ujson.loads(line)['text'][:max_characters] for line in f]\n",
+    "    print(f\"Loaded {len(corpus)} documents. Will encode them below.\")\n",
+    "\n",
+    "embedder = dspy.Embedder('openai/text-embedding-3-small', dimensions=512)\n",
+    "search = dspy.retrievers.Embeddings(embedder=embedder, corpus=corpus, k=topk_docs_to_retrieve)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RAG(dspy.Module):\n",
+    "    def __init__(self):\n",
+    "        self.respond = dspy.ChainOfThought('context, question -> response')\n",
+    "\n",
+    "    def forward(self, question):\n",
+    "        context = search(question).passages\n",
+    "        return self.respond(context=context, question=question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(\n",
+       "    reasoning=\"High memory and low memory in Linux refer to two distinct segments of the kernel's memory space. Low memory is the portion of memory that the kernel can access directly and is always mapped in the kernel's address space. This allows the kernel to access it without any additional steps. High memory, on the other hand, is not permanently mapped in the kernel's address space, meaning that the kernel must map it temporarily when it needs to access it. This distinction is crucial for managing memory efficiently, especially in a 32-bit architecture where the total addressable memory is limited. The kernel can access low memory directly, while high memory is used for temporary data buffers and requires specific functions (like kmap) to access.\",\n",
+       "    response=\"In Linux, low memory refers to the segment of memory that the kernel can access directly and is always mapped in the kernel's address space. High memory, however, is a segment that is not permanently mapped, meaning the kernel must temporarily map it to access it. This distinction is important for memory management, especially in 32-bit systems, where the kernel needs to handle both user-space and kernel-space memory efficiently.\"\n",
+       ")"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=347047137f6a4af68c6b6dc8d4602ba5&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "Trace(request_id=347047137f6a4af68c6b6dc8d4602ba5)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "rag = RAG()\n",
+    "rag(question=\"what are high memory and low memory on linux?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\u001b[34m[2025-03-11T21:40:37.919814]\u001b[0m\n",
+      "\n",
+      "\u001b[31mSystem message:\u001b[0m\n",
+      "\n",
+      "Your input fields are:\n",
+      "1. `context` (str)\n",
+      "2. `question` (str)\n",
+      "\n",
+      "Your output fields are:\n",
+      "1. `reasoning` (str)\n",
+      "2. `response` (str)\n",
+      "\n",
+      "All interactions will be structured in the following way, with the appropriate values filled in.\n",
+      "\n",
+      "[[ ## context ## ]]\n",
+      "{context}\n",
+      "\n",
+      "[[ ## question ## ]]\n",
+      "{question}\n",
+      "\n",
+      "[[ ## reasoning ## ]]\n",
+      "{reasoning}\n",
+      "\n",
+      "[[ ## response ## ]]\n",
+      "{response}\n",
+      "\n",
+      "[[ ## completed ## ]]\n",
+      "\n",
+      "In adhering to this structure, your objective is: \n",
+      "        Given the fields `context`, `question`, produce the fields `response`.\n",
+      "\n",
+      "\n",
+      "\u001b[31mUser message:\u001b[0m\n",
+      "\n",
+      "[[ ## context ## ]]\n",
+      "[1] «As far as I remember, High Memory is used for application space and Low Memory for the kernel. Advantage is that (user-space) applications cant access kernel-space memory.»\n",
+      "[2] «HIGHMEM is a range of kernels memory space, but it is NOT memory you access but its a place where you put what you want to access. A typical 32bit Linux virtual memory map is like: 0x00000000-0xbfffffff: user process (3GB) 0xc0000000-0xffffffff: kernel space (1GB) (CPU-specific vector and whatsoever are ignored here). Linux splits the 1GB kernel space into 2 pieces, LOWMEM and HIGHMEM. The split varies from installation to installation. If an installation chooses, say, 512MB-512MB for LOW and HIGH mems, the 512MB LOWMEM (0xc0000000-0xdfffffff) is statically mapped at the kernel boot time; usually the first so many bytes of the physical memory is used for this so that virtual and physical addresses in this range have a constant offset of, say, 0xc0000000. On the other hand, the latter 512MB (HIGHMEM) has no static mapping (although you could leave pages semi-permanently mapped there, but you must do so explicitly in your driver code). Instead, pages are temporarily mapped and unmapped here so that virtual and physical addresses in this range have no consistent mapping. Typical uses of HIGHMEM include single-time data buffers.»\n",
+      "[3] «This is relevant to the Linux kernel; Im not sure how any Unix kernel handles this. The High Memory is the segment of memory that user-space programs can address. It cannot touch Low Memory. Low Memory is the segment of memory that the Linux kernel can address directly. If the kernel must access High Memory, it has to map it into its own address space first. There was a patch introduced recently that lets you control where the segment is. The tradeoff is that you can take addressable memory away from user space so that the kernel can have more memory that it does not have to map before using. Additional resources: http://tldp.org/HOWTO/KernelAnalysis-HOWTO-7.html http://linux-mm.org/HighMemory»\n",
+      "[4] «The first reference to turn to is Linux Device Drivers (available both online and in book form), particularly chapter 15 which has a section on the topic. In an ideal world, every system component would be able to map all the memory it ever needs to access. And this is the case for processes on Linux and most operating systems: a 32-bit process can only access a little less than 2^32 bytes of virtual memory (in fact about 3GB on a typical Linux 32-bit architecture). It gets difficult for the kernel, which needs to be able to map the full memory of the process whose system call its executing, plus the whole physical memory, plus any other memory-mapped hardware device. So when a 32-bit kernel needs to map more than 4GB of memory, it must be compiled with high memory support. High memory is memory which is not permanently mapped in the kernels address space. (Low memory is the opposite: it is always mapped, so you can access it in the kernel simply by dereferencing a pointer.) When you access high memory from kernel code, you need to call kmap first, to obtain a pointer from a page data structure (struct page). Calling kmap works whether the page is in high or low memory. There is also kmap_atomic which has added constraints but is more efficient on multiprocessor machines because it uses finer-grained locking. The pointer obtained through kmap is a resource: it uses up address space. Once youve finished with it, you must call kunmap (or kunmap_atomic) to free that resource; then the pointer is no longer valid, and the contents of the page cant be accessed until you call kmap again.»\n",
+      "[5] «Since you dont mention, Im assuming this is on Linux. Any of the following should show you (with root): dmidecode -t memory dmidecode -t 16 lshw -class memory»\n",
+      "\n",
+      "[[ ## question ## ]]\n",
+      "what are high memory and low memory on linux?\n",
+      "\n",
+      "Respond with the corresponding output fields, starting with the field `[[ ## reasoning ## ]]`, then `[[ ## response ## ]]`, and then ending with the marker for `[[ ## completed ## ]]`.\n",
+      "\n",
+      "\n",
+      "\u001b[31mResponse:\u001b[0m\n",
+      "\n",
+      "\u001b[32m[[ ## reasoning ## ]]\n",
+      "High memory and low memory in Linux refer to two distinct segments of the kernel's memory space. Low memory is the portion of memory that the kernel can access directly and is always mapped in the kernel's address space. This allows the kernel to access it without any additional steps. High memory, on the other hand, is not permanently mapped in the kernel's address space, meaning that the kernel must map it temporarily when it needs to access it. This distinction is crucial for managing memory efficiently, especially in a 32-bit architecture where the total addressable memory is limited. The kernel can access low memory directly, while high memory is used for temporary data buffers and requires specific functions (like kmap) to access.\n",
+      "\n",
+      "[[ ## response ## ]]\n",
+      "In Linux, low memory refers to the segment of memory that the kernel can access directly and is always mapped in the kernel's address space. High memory, however, is a segment that is not permanently mapped, meaning the kernel must temporarily map it to access it. This distinction is important for memory management, especially in 32-bit systems, where the kernel needs to handle both user-space and kernel-space memory efficiently.\n",
+      "\n",
+      "[[ ## completed ## ]]\u001b[0m\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dspy.inspect_history()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate(RAG())"
+   ]
   }
  ],
  "metadata": {
