--- a/agents.ipynb
+++ b/agents.ipynb
@@ -57,9 +57,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading builder script: 100%|██████████| 4.48k/4.48k [00:00<00:00, 15.9kB/s]\n",
+      "Downloading readme: 100%|██████████| 4.13k/4.13k [00:00<00:00, 17.7kB/s]\n",
+      "Downloading data: 9.21MB [00:00, 77.4MB/s]                   \n",
+      "Downloading data: 2.15MB [00:00, 44.9MB/s]                  \n",
+      "Downloading data: 899kB [00:00, 35.5MB/s]                   \n",
+      "Generating train split: 100%|██████████| 18171/18171 [00:00<00:00, 36946.44 examples/s]\n",
+      "Generating validation split: 100%|██████████| 4000/4000 [00:00<00:00, 28205.96 examples/s]\n",
+      "Generating test split: 100%|██████████| 4000/4000 [00:00<00:00, 68392.45 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "from dspy.datasets import DataLoader\n",
@@ -76,6 +91,91 @@
     "\n",
     "random.Random(0).shuffle(hover)\n",
     "trainset, devset, testset = hover[:100], hover[100:200], hover[650:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Claim: This director is known for his work on Miss Potter. The Academy of Motion Picture Arts and Sciences presents the award in which he was nominated for his work in \"Babe\".\n",
+      "Pages that must be retrieved: ['Miss Potter', 'Chris Noonan', 'Academy Award for Best Director']\n"
+     ]
+    }
+   ],
+   "source": [
+    "example = trainset[0]\n",
+    "\n",
+    "print(\"Claim:\", example.claim)\n",
+    "print(\"Pages that must be retrieved:\", example.titles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DOCS = {}\n",
+    "\n",
+    "def search(query: str, k: int) -> list[str]:\n",
+    "    results = dspy.ColBERTv2(url='http://20.102.90.50:2017/wiki17_abstracts')(query, k=k)\n",
+    "    results = [x['text'] for x in results]\n",
+    "\n",
+    "    for result in results:\n",
+    "        title, text = result.split(\" | \", 1)\n",
+    "        DOCS[title] = text\n",
+    "\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search_wikipedia(query: str) -> list[str]:\n",
+    "    \"\"\"Returns top-5 results and then the titles of the top-5 to top-30 results.\"\"\"\n",
+    "\n",
+    "    topK = search(query, 30)\n",
+    "    titles, topK = [f\"`{x.split(' | ')[0]}`\" for x in topK[5:30]], topK[:5]\n",
+    "    return topK + [f\"Other retrieved pages have titles: {', '.join(titles)}.\"]\n",
+    "\n",
+    "def lookup_wikipedia(title: str) -> str:\n",
+    "    \"\"\"Returns the text of the Wikipedia page, if it exists.\"\"\"\n",
+    "\n",
+    "    if title in DOCS:\n",
+    "        return DOCS[title]\n",
+    "\n",
+    "    results = [x for x in search(title, 10) if x.startswith(title + \" | \")]\n",
+    "    if not results:\n",
+    "        return f\"No Wikipedia page found for title: {title}\"\n",
+    "    return results[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instructions = \"Find all Wikipedia titles relevant to verifying (or refuting) the claim.\"\n",
+    "signature = dspy.Signature(\"claim -> titles: list[str]\", instructions)\n",
+    "react = dspy.ReAct(signature, tools=[search_wikipedia, lookup_wikipedia], max_iters=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "react(claim=\"David Gregory was born in 1625.\").titles[:3]"
    ]
   }
  ],
